Stop builds from escaping the sandbox through the job directory
A sandboxed command can write anywhere in its job directory, including links to places the
sandbox denies it, and the server acted on those paths unconfined:

- Writable grants inside the job directory followed links. home and tmp were granted on their
  own and a policy path such as build/.nuget could be a link to the shared NuGet cache, so the
  next command got write (and exec) access to its target. home and tmp are no longer granted
  separately (the job directory's grant covers them); any other writable grant inside it that
  resolves outside is refused, in ProcessSandbox and again in the launcher (--job), which reads
  the path back from the descriptor it grants so a swap after the server's check is caught.
- The server wrote through planted links: log.txt, the SPM build.log and gitconfig, and every
  generated source list, main.cpp, Podfile, Gradle file, R8 rule file and the result zip.
  process/JobFiles removes whatever is at the name and creates the file with O_NOFOLLOW, and
  requires its directory to resolve inside the job directory.
- Copies and the result zip read through links, returning files the sandbox denies (a pod
  resource linked to /etc/extender/credentials/...). Every copied or zipped file must now
  resolve inside the job directory; links within it, such as a framework's Versions/Current,
  still work.
- A read-only grant nested under a writable one kept EXECUTE under Landlock, making that
  subtree writable and executable (the per-job NativeAOT runtime path). Such grants are
  dropped; the writable grant already makes them readable.

Launcher teardown gave up after 64 rounds of killing reparented children, so a chain that
forks new sessions and exits stayed a generation ahead and outlived the command. It now
SIGSTOPs everything below it, sweep after sweep until nothing is left running, then kills it.
selftest.sh covers both launcher changes; the old launcher leaves 1973 process