@@ -12,8 +12,6 @@ import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
 import org.yaml.snakeyaml.error.YAMLException;
 
-import java.io.BufferedWriter;
-import java.io.FileWriter;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.FileInputStream;
@@ -43,6 +41,7 @@ import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
+import com.defold.extender.process.JobFiles;
 import com.defold.extender.services.GradleArtifact;
 import com.defold.extender.services.GradleService;
 import com.defold.extender.services.ResolvedNativeDeps;
@@ -582,7 +581,7 @@ class Extender {
         frameworkPaths.addAll(getFrameworkPaths(pod.dir));
         frameworkPaths.addAll(collectDepFrameworkSearchPaths());
 
-        File sourceListFile = ExtenderUtil.writeSourceFilesListToTmpFile(pod.intermediatedDir, pod.swiftSourceFilePaths);
+        File sourceListFile = ExtenderUtil.writeSourceFilesListToTmpFile(buildState.jobDir, pod.intermediatedDir, pod.swiftSourceFilePaths);
 
         Map<String, Object> context = createContext(manifestContext);
         context.put("ext", ImmutableMap.of("includes", includes, "frameworks", frameworks, "frameworkPaths", frameworkPaths));
@@ -606,7 +605,7 @@ class Extender {
         frameworkPaths.addAll(getFrameworkPaths(pod.dir));
         frameworkPaths.addAll(collectDepFrameworkSearchPaths());
 
-        File sourceListFile = ExtenderUtil.writeSourceFilesListToTmpFile(pod.intermediatedDir, pod.swiftSourceFilePaths);
+        File sourceListFile = ExtenderUtil.writeSourceFilesListToTmpFile(buildState.jobDir, pod.intermediatedDir, pod.swiftSourceFilePaths);
 
         Map<String, Object> context = createContext(manifestContext);
         context.put("ext", ImmutableMap.of("includes", includes, "frameworks", frameworks, "frameworkPaths", frameworkPaths));
@@ -628,12 +627,12 @@ class Extender {
         String podName = spec.name;
         Path sourceModuleMap = Path.of(podDir.toString(), "Target Support Files", podName, String.format("%s.modulemap", podName));
         Path targetModuleMap = Path.of(podBuildDir.toString(), String.format("%s.modulemap", spec.moduleName)); // it's not a bug. Cocoapods installs module map in Target support Files with spec.name but in compiler options it waits spec.moduleName
-        Files.copy(sourceModuleMap, targetModuleMap, StandardCopyOption.REPLACE_EXISTING);
+        JobFiles.copyFile(buildState.jobDir, sourceModuleMap.toFile(), targetModuleMap.toFile());
 
         // copy umbrella header
         Path sourceUmbrellaHeader = Path.of(podDir.toString(), "Target Support Files", podName, String.format("%s-umbrella.h", podName));
         Path targetUmbrellaHeader = Path.of(podBuildDir.toString(), String.format("%s-umbrella.h", podName));
-        Files.copy(sourceUmbrellaHeader, targetUmbrellaHeader, StandardCopyOption.REPLACE_EXISTING);
+        JobFiles.copyFile(buildState.jobDir, sourceUmbrellaHeader.toFile(), targetUmbrellaHeader.toFile());
 
         // append to objc modulemap
         Files.writeString(targetModuleMap, spec.swiftModuleDefinition, StandardOpenOption.APPEND);
@@ -655,8 +654,8 @@ class Extender {
         List<String> frameworkPaths = new ArrayList<>();
         frameworkPaths.addAll(collectDepFrameworkSearchPaths());
 
-        File sourceFileList = ExtenderUtil.writeSourceFilesListToTmpFile(pod.intermediatedDir, swiftSourceFilePaths);
-        File primarySourceFile = ExtenderUtil.writeSourceFilesListToTmpFile(pod.intermediatedDir, Set.of(swiftPrimarySourceFile));
+        File sourceFileList = ExtenderUtil.writeSourceFilesListToTmpFile(buildState.jobDir, pod.intermediatedDir, swiftSourceFilePaths);
+        File primarySourceFile = ExtenderUtil.writeSourceFilesListToTmpFile(buildState.jobDir, pod.intermediatedDir, Set.of(swiftPrimarySourceFile));
         Map<String, Object> context = createContext(manifestContext);
         context.put("ext", ImmutableMap.of("includes", includes, "frameworks", frameworks, "frameworkPaths", frameworkPaths));
         context.put("tgt", ExtenderUtil.getRelativePath(buildState.jobDir, o));
@@ -1000,31 +999,31 @@ class Extender {
             String frameworkHeadersDirPath = frameworkHeaders.toString();
             // Collect headers
             for (File header : spec.publicHeaders) {
-                FileUtils.copyFileToDirectory(header, frameworkHeaders);
+                JobFiles.copyFileToDirectory(buildState.jobDir, header, frameworkHeaders);
                 PodBuildUtil.putFileNameIntoVFS(enumeratedFiles, frameworkHeadersDirPath, header);
             }
 
             // copy first time
             File sourceModuleMap = Path.of(targetSupportFileDir.toString(), podName, String.format("%s.modulemap", podName)).toFile();
-            FileUtils.copyFile(sourceModuleMap, new File(frameworkModules, "module.modulemap"));
+            JobFiles.copyFile(buildState.jobDir, sourceModuleMap, new File(frameworkModules, "module.modulemap"));
             PodBuildUtil.putFileNameIntoVFS(enumeratedFiles, frameworkModules.toString(), sourceModuleMap);
 
             File sourceUmbrellaHeader = Path.of(targetSupportFileDir.toString(), podName, String.format("%s-umbrella.h", podName)).toFile();
-            FileUtils.copyFileToDirectory(sourceUmbrellaHeader, frameworkHeaders);
+            JobFiles.copyFileToDirectory(buildState.jobDir, sourceUmbrellaHeader, frameworkHeaders);
             PodBuildUtil.putFileNameIntoVFS(enumeratedFiles, frameworkHeadersDirPath, sourceUmbrellaHeader);
 
-            PodBuildUtil.generateVFSOverlay(spec, enumeratedFiles);
+            PodBuildUtil.generateVFSOverlay(buildState.jobDir, spec, enumeratedFiles);
             // Compile library
             File library = buildPodLibrary(spec);
 
-            FileUtils.copyFile(library, new File(frameworkDir, spec.moduleName));
+            JobFiles.copyFile(buildState.jobDir, library, new File(frameworkDir, spec.moduleName));
 
             // copy from generateSwiftCompatabilityHeader
             if (spec.swiftModuleHeader != null && spec.swiftModuleHeader.exists()) {
-                FileUtils.copyFileToDirectory(spec.swiftModuleHeader, frameworkHeaders);
+                JobFiles.copyFileToDirectory(buildState.jobDir, spec.swiftModuleHeader, frameworkHeaders);
                 // copy the second time because during generating swift compatibility header modulemap was updated
                 File updatedModuleMap = new File(spec.buildDir, String.format("%s.modulemap", spec.moduleName));
-                FileUtils.copyFile(updatedModuleMap, new File(frameworkModules, "module.modulemap"), StandardCopyOption.REPLACE_EXISTING);
+                JobFiles.copyFile(buildState.jobDir, updatedModuleMap, new File(frameworkModules, "module.modulemap"));
             }
 
             // Copy swift module 
@@ -1032,21 +1031,21 @@ class Extender {
             if (swiftModule.exists()) {
                 File targetSwiftModuleDir = new File(frameworkModules, spec.moduleName + ".swiftmodule");
                 File targetSwiftModuleName = new File(targetSwiftModuleDir, String.format("%s.swiftmodule", PodUtils.swiftModuleNameFromPlatform(targetPlatform)));
-                FileUtils.copyFile(swiftModule, targetSwiftModuleName, StandardCopyOption.REPLACE_EXISTING);
+                JobFiles.copyFile(buildState.jobDir, swiftModule, targetSwiftModuleName);
             }
             // 4.2. Copy modulemap
             for (File bundle : resourceBundles) {
-                FileUtils.copyDirectoryToDirectory(bundle, frameworkDir);
+                JobFiles.copyDirectoryToDirectory(buildState.jobDir, bundle, frameworkDir);
             }
             Set<File> resources = new HashSet<>();
             ResolvedPods.addPodResources(spec, resources);
             for (File res : resources) {
-                FileUtils.copyFileToDirectory(res, frameworkDir);
+                JobFiles.copyFileToDirectory(buildState.jobDir, res, frameworkDir);
             }
 
             // copy Info.plist
             File sourceInfoPlist = Path.of(targetSupportFileDir.toString(), podName, String.format("%s-Info.plist", podName)).toFile();
-            PodBuildUtil.generatedInfoPlistFromTemplate(sourceInfoPlist, Map.of(
+            PodBuildUtil.generatedInfoPlistFromTemplate(buildState.jobDir, sourceInfoPlist, Map.of(
                 "PODS_DEVELOPMENT_LANGUAGE", "en",
                 "EXECUTABLE_NAME", spec.moduleName,
                 "PRODUCT_BUNDLE_IDENTIFIER", String.format("org.cocoapods.%s", spec.moduleName),
@@ -1147,11 +1146,10 @@ class Extender {
                     }
                 }
                 if (resourceFile.isFile()) {
-                    resourceDest.getParentFile().mkdirs();
-                    Files.copy(resourceFile.toPath(), resourceDest.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                    JobFiles.copyFile(buildState.jobDir, resourceFile, resourceDest);
                 } else {
                     resourceDest.mkdirs();
-                    FileUtils.copyDirectory(resourceFile, resourceDest);
+                    JobFiles.copyDirectory(buildState.jobDir, resourceFile, resourceDest, null);
                 }
                 if (!collision) {
                     outputFiles.add(resourceDest);
@@ -1164,7 +1162,7 @@ class Extender {
                 // copy framework and filter out certain files and folders
                 LOGGER.info("buildNativeDepsArtifacts - adding {}", framework.getName());
                 File frameworkDestDir = new File(frameworksBuildDir, framework.getName());
-                FileUtils.copyDirectory(framework, frameworkDestDir, new FileFilter() {
+                JobFiles.copyDirectory(buildState.jobDir, framework, frameworkDestDir, new FileFilter() {
                     @Override
                     public boolean accept(File pathname) {
                         String name = pathname.getName();
@@ -1179,7 +1177,7 @@ class Extender {
             if (lockFile != null) {
                 LOGGER.info("buildNativeDepsArtifacts - adding {} to build output", lockFile.getName());
                 File destLockFile = new File(buildState.buildDir, lockFile.getName());
-                FileUtils.copyFile(lockFile, destLockFile);
+                JobFiles.copyFile(buildState.jobDir, lockFile, destLockFile);
                 outputFiles.add(destLockFile);
             }
         }
@@ -1239,7 +1237,7 @@ class Extender {
         // beside every project it restores, including one reached through a ProjectReference. The
         // dmsdk project is self-contained source (no project reference of its own, nothing outside
         // its directory), so the job builds against a copy inside its own build directory.
-        File jobSdkCsdmSDKDir = new File(buildState.buildDir, "dmsdk");
+        File jobSdkCsdmSDKDir = new File(buildState.jobDir, "cs-dmsdk");
         FileUtils.copyDirectory(sdkCsdmSDKDir, jobSdkCsdmSDKDir);
         File sdkProject = new File(jobSdkCsdmSDKDir, "dmsdk.csproj");
 
@@ -1391,9 +1389,11 @@ class Extender {
                 File sourcesListFile = new File(extBuildDir, "sources.txt");
 
                 // Write source paths to sources.txt
+                StringBuilder sourcesList = new StringBuilder();
                 for (File javaFile : srcFiles) {
-                    FileUtils.writeStringToFile(sourcesListFile, javaFile.getAbsolutePath() + "\n", Charset.defaultCharset(), true);
+                    sourcesList.append(javaFile.getAbsolutePath()).append('\n');
                 }
+                JobFiles.writeString(buildState.jobDir, sourcesListFile, sourcesList.toString(), Charset.defaultCharset());
 
                 File classesDir = new File(extBuildDir, "classes");
                 Files.createDirectories(classesDir.toPath());
@@ -1531,7 +1531,7 @@ class Extender {
         mainContext.put("ext", ImmutableMap.of("symbols", ExtenderUtil.makeUnique(extSymbols)));
 
         String main = templateExecutor.execute(config.main, mainContext);
-        FileUtils.writeStringToFile(maincpp, main, Charset.defaultCharset());
+        JobFiles.writeString(buildState.jobDir, maincpp, main, Charset.defaultCharset());
 
         File mainObject = compileMain(maincpp, linkContext);
 
@@ -1613,7 +1613,7 @@ class Extender {
         }
 
         for (String filepath : dynamicLibsPathes) {
-            FileUtils.copyFileToDirectory(new File(filepath), buildState.buildDir);
+            JobFiles.copyFileToDirectory(buildState.jobDir, new File(filepath), buildState.buildDir);
         }
 
         // Collect output/binaries
@@ -1813,9 +1813,7 @@ class Extender {
                 }
             }
             File resourceList = new File(buildState.buildDir, "compiledresources.txt");
-            try (BufferedWriter writer = new BufferedWriter(new FileWriter(resourceList))) {
-                writer.write(sb.toString());
-            }
+            JobFiles.writeString(buildState.jobDir, resourceList, sb.toString(), Charset.defaultCharset());
             context.put("resourceListFile", resourceList.getAbsolutePath());
 
             // extra packages
@@ -1920,9 +1918,11 @@ class Extender {
                 File sourcesListFile = new File(tmpDir, "sources.txt");
 
                 // Write source paths to sources.txt
+                StringBuilder sourcesList = new StringBuilder();
                 for (File javaFile : files) {
-                    FileUtils.writeStringToFile(sourcesListFile, javaFile.getAbsolutePath() + "\n", Charset.defaultCharset(), true);
+                    sourcesList.append(javaFile.getAbsolutePath()).append('\n');
                 }
+                JobFiles.writeString(buildState.jobDir, sourcesListFile, sourcesList.toString(), Charset.defaultCharset());
 
                 // Compile sources into class files
                 Map<String, Object> context = createContext(mergedAppContext);
@@ -1995,9 +1995,11 @@ class Extender {
             File outputJar = new File(tmpDir, "output.jar");
 
             // Add all Java file paths to the sources.txt file
+            StringBuilder sourcesList = new StringBuilder();
             for (File javaSrc : javaSrcFiles) {
-                FileUtils.writeStringToFile(sourcesListFile, javaSrc.getAbsolutePath() + "\n", Charset.defaultCharset(), true);
+                sourcesList.append(javaSrc.getAbsolutePath()).append('\n');
             }
+            JobFiles.writeString(buildState.jobDir, sourcesListFile, sourcesList.toString(), Charset.defaultCharset());
 
             // Compile sources into class files
             Map<String, Object> context = createContext(manifestContext);
@@ -2124,7 +2126,11 @@ class Extender {
                 .map(classFile -> String.format("-keep class %s { *; }", classFile.replace("/", ".").replace(".class", "")))
                 .collect(Collectors.toList());
         try {
-            Files.write(mainList.toPath(), keepRules, Charset.defaultCharset());
+            StringBuilder mainListContents = new StringBuilder();
+            for (String rule : keepRules) {
+                mainListContents.append(rule).append(System.lineSeparator());
+            }
+            JobFiles.writeString(buildState.jobDir, mainList, mainListContents.toString(), Charset.defaultCharset());
         } catch (IOException e) {
             throw new ExtenderException(e, "Failed to write to " + mainList.getAbsolutePath());
         }
@@ -2441,7 +2447,7 @@ class Extender {
 
         try {
             for (File jni : jniFolders) {
-                FileUtils.copyDirectory(jni, targetDir);
+                JobFiles.copyDirectory(buildState.jobDir, jni, targetDir, null);
             }
         } catch (IOException e) {
             throw new ExtenderException(e, "Failed to copy android JNIs");
@@ -2514,7 +2520,7 @@ class Extender {
                     if (ExtenderUtil.isMetaInfEntryValuable(entry)) {
                         // Extract the file
                         LOGGER.info(String.format("Extracting file: %s", entry.getName()));
-                        result.add(ExtenderUtil.extractFile(jarFile, entry, buildState.buildDir));
+                        result.add(ExtenderUtil.extractFile(buildState.jobDir, jarFile, entry, buildState.buildDir));
                     }
                 }
             } catch (IOException exc) {
@@ -2642,7 +2648,7 @@ class Extender {
         if (privacyManifests.size() == 1) {
             File targetFile = new File(buildState.buildDir, "PrivacyInfo.xcprivacy");
             try {
-                FileUtils.copyFile(privacyManifests.get(0), targetFile);
+                JobFiles.copyFile(buildState.jobDir, privacyManifests.get(0), targetFile);
                 outputFiles.add(targetFile);
             } catch (IOException exc) {
                 LOGGER.warn("Can't copy PrivacyInfo.xcprivacy to build folder", exc);
@@ -2724,7 +2730,7 @@ class Extender {
 
             LOGGER.info("Copying manifest");
             try {
-                FileUtils.copyFile(mainManifest, targetManifest);
+                JobFiles.copyFile(buildState.jobDir, mainManifest, targetManifest);
             } catch (IOException e) {
                 throw new ExtenderException(e, String.format("Failed to copy manifest %s to %s", mainManifest.getAbsolutePath(), targetManifest.getAbsolutePath()));
             }
@@ -2752,7 +2758,7 @@ class Extender {
         File logFile = new File(buildState.buildDir, "log.txt");
         try {
             LOGGER.info("Writing log file");
-            processExecutor.writeLog(logFile);
+            processExecutor.writeLog(buildState.jobDir, logFile);
         } catch (IOException e) {
             LOGGER.error(Markers.SERVER_ERROR, "Failed to write log file to {}", logFile.getAbsolutePath());
         }
